# IR-Remote-Receiver-Python-Module

./: README.md  example.py  pyproject.toml  setup.py
IRModule/: IRModule.py  __init__.py
example/: receiver.py
src/JoyIT_IR_Remote_Receiver/: __init__.py
